style.css
body {
    display: grid;
    width: 100%;
}

.container {
    display: grid;
    grid-template-columns: 1fr 4fr;
    grid-template-rows: max(120px, 20%) auto;
    justify-self: center;
    margin-top: -10px;
    width: 100%;
    height: 100vh;
}

.header {
    background-color: aqua;
    grid-column: 2;
    display: grid;
    grid-template-rows: 33% 67%;
  
}

.header-top {
    background-color: white;
    display: grid;
    grid-template-columns: 70% 30%;
    padding-top: 15px;
}

.left {
    background-color: white;
    display: grid;
    grid-template-columns: 5% 95%;
    align-items: center;
    padding: 10px;
    gap: 10px;
}

.left input {
    justify-self: stretch;
    border-radius: 10px;
    border-style: none;
    background-color: rgb(235, 235, 235);
    height: 25px;
    width: 80%;
    margin-right: 40px;

}

.left img {
    justify-self: right;
    width: 20px;
}

.right {
    /* background-color: darkviolet; */
    display: grid;
    grid-template-columns: 1fr 1fr 5fr;
    padding: 0px 0px 0px 20px;
    gap: 10px;

}

.right img {
    justify-self: center;
    align-self: center;
   
}

.small-user {
    width: 50px;
}

.right p {
    align-self: center;
    justify-self: left;
    font-weight: bold;
}


.header-bottom {
    background-color: white;
    display: grid;
    grid-template-columns: 2fr 1fr;
   
}

.lower-left {
    /* background-color: lime; */
    display: grid;
    grid-template-columns: 1fr 5fr;
  
}

.lower-left img {
    align-self: center;
    justify-self: self-end;
    width: 80px;

}

.greeting {
    align-self: center;
    font-size: 12px;
    font-weight: bold;
}


.username {
    font-size: 24px;
}


.lower-right {
    /* background-color: hotpink; */
    /* display: grid; */
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 20px;
    
   
}

button {
    border-radius: 30px;
    width: 90px;
    padding-top: 8px;
    padding-bottom: 8px;
    color: white;
    background-color: rgb(218, 132, 146);;
    border-style: none;
}

.sidebar {

    grid-column: 1;
    grid-row: 1 / 3;
    display: grid;
    grid-template-rows: 100px auto;
    background-color: rgb(218, 132, 146);
  
   
}

.logo {
    display: grid;
    grid-template-columns: 1fr 4fr;
    gap: 10px;
    padding: 10px;

}

.logo img {
    /* background-color: chartreuse; */
    align-self: top;
    justify-self: right;
    width: 50px;
}

.logo h1 {
    /* background-color: gray; */
    font-size: 20px;
    color: white;
}

.sidebar-menu {
    display: grid;
    align-content: start;
    gap: 1px;
}

.sidebar-link {
    display: grid;
    grid-template-columns: 1fr 4fr;
    /* border: 2px solid blue; */
    gap: 10px;
    height: 50px;
}

.sidebar-link img {
    /* border: 1px solid green; */
    justify-self: right;
    align-self: center;
    color: white;
    width: 20px;
}

.sidebar-link p {
    /* border: 1px solid purple; */
    align-self: center;
    color: white;
}

.main-content {
    background-color: rgb(239, 202, 214);
    display: grid;
    grid-template-columns: 3fr 1fr;
    grid-column: 2;
    grid-row: 2;
    box-shadow: 0px 5px 5px rgb(210, 183, 183) inset;
    padding-bottom: 10px;
}

.projects {
    /* background-color: cadetblue; */
    display: grid;
    grid-template-rows: 30px auto;
    margin-top: 20px;
}

.project-title {
    /* background-color: wheat; */
    padding-left: 20px;
    align-self: end;
    font-size: 20px;
}

.project-cards {
    
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
    grid-template-rows: repeat(3, 1fr);
    gap: 20px;
    padding: 5px 20px 20px 20px;

}

.card {
    background-color: white;
    border-radius: 10px;
    justify-self: start;
    display: grid;
    grid-template-columns: 1fr 10fr;
}

.line {
    background-color: rgb(218, 132, 146);
    width: 10px;
    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
}

.card-body {
    padding: 5px;
    display: flex;  
    flex-direction: column;
    gap: 1px;
    justify-items: flex-start;
    align-items: flex-start;
    font-size: 12px;
    /* border: 5px solid green; */
}

.card-body div {
    flex: 1;
    /* background-color: azure; */
    
}


.card-title {
    display: flex;
    align-items: flex-end;
    font-weight: bold;
    margin-bottom: 5px;
    font-size: 16px;
}


.card-icons {
    align-self: flex-end;
    flex: 1;
    padding: 5px;
    display: flex;
    gap: 15px;
}

.card-icons img {
    flex: 1;
    width: 20px;
}

.main-right {
    /* background-color: mediumpurple; */
    display: grid;
    grid-template-rows: 1fr 1fr;
   
}

.announcements,
.trending {
    display: grid;
    grid-template-rows: 30px auto;
    margin-top: 20px;
    /* background-color: purple; */
    gap: 5px;
}


.announce-title,
.trending-title {
    font-size: 20px;
    /* background-color: blanchedalmond; */
    align-self: end;
    padding-left: 10px;
}

.sidecard.announce {
    display: grid;
    grid-template-rows: 1fr 1fr 1fr;
    background-color: white;
    border-radius: 10px;
    font-size: 12px;
    padding: 20px;
    margin-right: 20px;

    /* background-color: blue; */
}

.sidecard.trend {
    display: grid;
    grid-template-rows: auto;
    align-content: start;
    background-color: white;
    margin-right: 20px;
    border-radius: 10px;
    padding: 10px;
}

.side-title {
    font-size: 14px;
    font-weight: bold;
}

.trending-card {
    display: grid;
    /* background-color: pink; */
    grid-template-columns: 1fr 3fr;
    gap: 10px;
    align-self: start;
    
}

.usericon {
    align-self: center;
    justify-self: end;
    width: 50px;
    /* background-color: purple; */
}

.userinfo {
    align-self: center;
    justify-self: start;
}

.username-trend {
    font-size: 13px;
    font-weight: bold;
}

.displayname {
    color: gray;
    font-size: 10px;
}

